# rechenknecht

./: .gitignore  README.md  app_edgar.py  app_yahoo.py  apps.code-workspace  pyproject.toml  user_agent.csv  yfinance_example.py
.github/workflows/: workflow.yml
classes/: Edgar_api.py  Html_analyzer.py  Rechenknecht.py  RechenknechtBeta.py  Rechenknecht_yahoo.py
documents/: rechenknecht_index_map.json
documents/analyzed_companies_sec/: Rechenknecht Apple Inc..xlsx  Rechenknecht Exceed World, Inc..xlsx  Rechenknecht MICROSOFT CORP.xlsx  Rechenknecht SKYWORKS SOLUTIONS, INC..xlsx  Rechenknecht Tesla, Inc..xlsx
documents/analyzed_files/: Rechenknecht 3M CO.xlsx  Rechenknecht DISH Network CORP.xlsx  Rechenknecht FOOT LOCKER, INC..xlsx  Rechenknecht Fulgent Genetics, Inc..xlsx  Rechenknecht Hamilton Beach Brands Holding Co.xlsx  Rechenknecht KULICKE & SOFFA INDUSTRIES INC.xlsx  Rechenknecht QuidelOrtho Corp.xlsx  Rechenknecht Restaurant Brands International Inc..xlsx  Rechenknecht Tesla, Inc..xlsx
filings/hbb/: 2020-12-31_0001709164-21-000015_hbb-20201231.htm  2021-12-31_0001709164-22-000009_hbb-20211231.htm  2022-12-31_0001709164-23-000015_hbb-20221231.htm
filings/klic/: 2019-09-28_0000056978-19-000130_a10-k2019.htm  2020-10-03_0000056978-20-000146_klic-20201003.htm  2021-10-02_0000056978-21-000153_klic-20211002.htm  2022-10-01_0000056978-22-000136_klic-20221001.htm
src/: DBConnector.py  Edgar_api.py  Rechenknecht.py  RechenknechtBeta.py  Sec_api.py
test/: test_rechenknecht_beta.py
test/resources/: footlocker_actual.csv  (+1 more)
tests/: RechenknechtBetaTest.py
(+33 files in other folders)
