[tool.poetry]
name = "rechenknecht"
version = "0.1.0"
description = ""
authors = ["Fabian Scharnböck <fabian.scharnboeck@t-online.de>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
pandas = "^2.1.0"
beautifulsoup4 = "^4.12.2"
yfinance = "^0.2.28"
openpyxl = "^3.1.2"
pytest = "^7.4.2"
colorama = "^0.4.6"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
